--- a/WpfAgendaDatabase/View/ViewAccueil.xaml
+++ b/WpfAgendaDatabase/View/ViewAccueil.xaml
@@ -1,11 +1,18 @@
 ﻿<UserControl x:Class="WpfAgendaDatabase.View.ViewAccueil"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfAgendaDatabase.View"
-             mc:Ignorable="d" 
+             xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid Background="AliceBlue">
+    <Grid Background="WhiteSmoke">
+        <Label Content="Accueil" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="60" FontWeight="Bold" Margin="0,163,0,0"/>
+        <Label Content="Bienvenue sur l'application de gestion de votre agenda" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,238,0,0" FontSize="20" FontWeight="DemiBold"/>
+        <TextBlock x:Name="DateTimeDisplay" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,280,0,0" FontSize="20"/>
+        <!--<StackPanel Margin="10">
+            <TextBlock Text="Votre Analyse de Productivité" FontWeight="Bold" FontSize="16"/>
+            <lvc:CartesianChart Series="{Binding MySeries}"/>
+        </StackPanel>-->
     </Grid>
 </UserControl>
