--- a/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
+++ b/WpfAgendaDatabase/View/ViewAjouterToDoList.xaml
@@ -16,12 +16,12 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Label Content="Titre" Grid.Row="0" Margin="0,10" VerticalAlignment="Center"/>
+        <Label Content="Titre :" Grid.Row="0" Margin="0,10" VerticalAlignment="Center"/>
         <TextBox x:Name="textBoxTitre" Grid.Row="1" Margin="0,10" Height="20" VerticalAlignment="Center"/>
 
-        <TextBlock Text="Date (JJ/MM/AAAA):" Grid.Row="2" Margin="0,10" VerticalAlignment="Center"/>
+        <TextBlock Text="Date (JJ/MM/AAAA) :" Grid.Row="2" Margin="0,10" VerticalAlignment="Center"/>
         <TextBox x:Name="textBoxDate" Grid.Row="3" Margin="0,10" Height="20" VerticalAlignment="Center"/>
 
-        <Button Content="Ajouter ToDoList" Grid.Row="4" Margin="0,20" Click="AjouterTDL_Click"/>
+        <Button Content="Ajouter ToDoList ➕" Grid.Row="4" Margin="0,20" Click="AjouterTDL_Click" Style="{StaticResource GreenRoundedButtonStyle}"/>
     </Grid>
 </UserControl>
