--- a/WpfAgendaDatabase/View/ViewCalendrier.xaml
+++ b/WpfAgendaDatabase/View/ViewCalendrier.xaml
@@ -18,6 +18,7 @@
             </Border>
         </DataTemplate>
     </UserControl.Resources>
+
     <Grid Background="AliceBlue">
         <!-- Définition des lignes de la grille -->
         <Grid.RowDefinitions>
@@ -28,6 +29,10 @@
             <RowDefinition Height="*"/>
             <!-- Liste des événements -->
         </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
         <!-- Titre -->
         <TextBlock Grid.Row="0" Text="Calendrier :" FontSize="24" FontWeight="Bold" TextDecorations="Underline" Padding="5" Margin="20,10,0,0" HorizontalAlignment="Left"/>
@@ -40,8 +45,10 @@
                 <Button Content="Modifier" HorizontalAlignment="Left" Margin="10,12,0,0" VerticalAlignment="Top" Width="150" Style="{StaticResource BlueRoundedButtonStyle}" Click="Button_Click_Modify_Event"/>
             </StackPanel>
         </Border>
-        
-        
+
+        <StackPanel Orientation="Horizontal" Margin="10" HorizontalAlignment="Right">
+            <Button Content="Déconnexion" Name="LogoutButton" Click="LogoutButton_Click" />
+        </StackPanel>
 
         <!-- Liste des événements -->
         <ListView Grid.Row="2" x:Name="EventsListView" ItemsSource="{Binding Events}" ItemTemplate="{StaticResource EventTemplate}" Margin="20,10,20,20">
@@ -51,5 +58,7 @@
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
         </ListView>
+
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="MainContent"/>
     </Grid>
 </UserControl>
