--- a/WpfAgendaDatabase/View/ViewContact.xaml
+++ b/WpfAgendaDatabase/View/ViewContact.xaml
@@ -14,6 +14,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <TextBlock Grid.Row="0" FontSize="24" FontWeight="Bold" Text="Contact :" TextDecorations="Underline" Padding="5" Margin="20,10,0,0" HorizontalAlignment="Left"/>
 
 
@@ -49,6 +53,6 @@
                 <!-- Add more columns as necessary -->
             </DataGrid.Columns>
         </DataGrid>
-        <ContentControl x:Name="MainContent" />
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="MainContent"/>
     </Grid>
 </UserControl>
