--- a/WpfAgendaDatabase/View/ViewToDoList.xaml
+++ b/WpfAgendaDatabase/View/ViewToDoList.xaml
@@ -38,6 +38,10 @@
             <!-- Pour afficher les ToDoLists -->
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <TextBlock Grid.Row="0" Text="To Do List :" FontSize="24" FontWeight="Bold" TextDecorations="Underline" Margin="20,10,20,0" HorizontalAlignment="Left"/>
 
         <!-- Boutons dans la deuxième ligne -->
@@ -61,6 +65,6 @@
         </Border>
 
 
-        <ContentControl x:Name="MainContent" />
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.RowSpan="3" Grid.ColumnSpan="2" x:Name="MainContent"/>
     </Grid>
 </UserControl>
